# gnome-games-extra-data

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.README  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  gnome-games-extra-data.doap
glines/: Makefile.am
gnobots2/: Makefile.am
gnometris/: Makefile.am
gnometris/backgrounds/: Makefile.am  README
iagno/: Makefile.am
mahjongg/: Makefile.am
same-gnome/: Makefile.am
same-gnome/2.10/: Makefile.am
