# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script

AC_PREREQ([2.53])
AC_INIT([gnome-games-extra-data],[2.12.0],
	[http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-games])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([mahjongg/maya.png])

AM_MAINTAINER_MODE

AC_ARG_ENABLE(old,
[  --enable-old		Install themes with obsolete formats.],
[case "${enableval}" in
  yes) enable_old=yes ;;
  no)  enable_old=no ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-old) ;;
 esac],[enable_old=no])
AC_SUBST(enable_old)
AM_CONDITIONAL([ENABLE_OLD], [test "x$enable_old" = "xyes"])

AC_CONFIG_FILES([
Makefile
cards/Makefile
glines/Makefile
gnobots2/Makefile
gnometris/Makefile
gnometris/backgrounds/Makefile
iagno/Makefile
mahjongg/Makefile
same-gnome/Makefile
same-gnome/2.10/Makefile
])
AC_OUTPUT

echo "Install obsolete themes:	${enable_old}"
