# -*- Autoconf -*-

AC_PREREQ([2.53])

AC_INIT([GNOME Games Extra Data],
        [2.20.0],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-games&component=general],
        [gnome-games-extra-data])

AC_CONFIG_SRCDIR([mahjongg/maya.png])

AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

AC_ARG_ENABLE([old],
[AS_HELP_STRING([--enable-old],[Install themes with obsolete formats])],
[case "${enableval}" in
  yes) enable_old=yes ;;
  no)  enable_old=no ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-old) ;;
 esac],[enable_old=no])

AC_SUBST([enable_old])
AM_CONDITIONAL([ENABLE_OLD], [test "$enable_old" = "yes"])

AC_CONFIG_FILES([
Makefile
cards/Makefile
glines/Makefile
gnobots2/Makefile
gnometris/Makefile
gnometris/backgrounds/Makefile
iagno/Makefile
mahjongg/Makefile
same-gnome/Makefile
same-gnome/2.10/Makefile
])
AC_OUTPUT

echo "Install obsolete themes:	${enable_old}"
