# -*- Autoconf -*-

AC_PREREQ([2.53])

AC_INIT([GNOME Games Extra Data],
        [2.25.0-svn],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-games&component=general],
        [gnome-games-extra-data])

AC_CONFIG_SRCDIR([mahjongg/maya.png])

AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

if test -z "$enable_maintainer_mode"; then
  enable_maintainer_mode=yes
fi
AM_MAINTAINER_MODE([enable])

AC_CONFIG_FILES([
Makefile
cards/Makefile
glines/Makefile
gnobots2/Makefile
gnometris/Makefile
gnometris/backgrounds/Makefile
iagno/Makefile
mahjongg/Makefile
same-gnome/Makefile
same-gnome/2.10/Makefile
])
AC_OUTPUT

echo "Install obsolete themes:	${enable_old}"
